[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/players/adam/chef.png" type="Texture" id=1]
[ext_resource path="res://animations/idle.tres" type="Animation" id=2]
[ext_resource path="res://scripts/body.gd" type="Script" id=3]
[ext_resource path="res://assets/players/hand.png" type="Texture" id=4]
[ext_resource path="res://assets/players/adam/head.png" type="Texture" id=5]
[ext_resource path="res://assets/leg.png" type="Texture" id=6]
[ext_resource path="res://animations/jump.tres" type="Animation" id=7]
[ext_resource path="res://animations/run.tres" type="Animation" id=8]
[ext_resource path="res://animations/fall.tres" type="Animation" id=9]
[ext_resource path="res://assets/players/adam/knife.png" type="Texture" id=10]
[ext_resource path="res://scenes/bars.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/adam.gd" type="Script" id=12]
[ext_resource path="res://animations/stab.tres" type="Animation" id=13]
[ext_resource path="res://animations/attack.tres" type="Animation" id=14]
[ext_resource path="res://assets/players/adam/beer.png" type="Texture" id=15]
[ext_resource path="res://assets/players/adam/case.png" type="Texture" id=16]
[ext_resource path="res://scenes/beer.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/GlacialIndifference-Italic.otf" type="DynamicFontData" id=18]
[ext_resource path="res://scenes/adam_ult.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/players/adam/computer.png" type="Texture" id=20]
[ext_resource path="res://assets/players/adam/eyes.png" type="Texture" id=21]
[ext_resource path="res://animations/die.tres" type="Animation" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.9756, 4.63228 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0864
height = 38.4879

[sub_resource type="DynamicFont" id=3]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 18 )

[sub_resource type="Animation" id=5]
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 38.6787, 11.7249 ), Vector2( 43.4483, -3.11395 ), Vector2( 38.6787, 11.7249 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 19.1318, 20.1381 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 26.3718, 8.01518 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 19.1318, 20.1381 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 19.1318, 20.1381 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.1, 1.3, 1.5, 1.8, 2.3, 2.5, 2.6, 2.9, 3.2, 3.5, 6.2, 6.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 34.3212, 9.60505 ), Vector2( 41.7407, 9.60505 ), Vector2( 31.9123, 9.60505 ), Vector2( 35.7522, 9.60505 ), Vector2( 41.0314, 10.135 ), Vector2( 33.9474, 10.6496 ), Vector2( 34.3212, 9.60505 ), Vector2( 41.7407, 9.60505 ), Vector2( 31.9123, 9.60505 ), Vector2( 35.7522, 9.60505 ), Vector2( 41.0314, 10.135 ), Vector2( 33.9474, 10.6496 ), Vector2( 34.3212, 9.60505 ), Vector2( 41.7407, 9.60505 ), Vector2( 41.7407, 9.60505 ), Vector2( 38.6787, 11.7249 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.1, 1.3, 6.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("KinematicBody2D/Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("KinematicBody2D/Sprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("KinematicBody2D/Sprite/legL:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8.19322, 23.9495 ), Vector2( -7.1333, 23.9495 ), Vector2( -7.1333, 23.9495 ), Vector2( -8.19322, 23.9495 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("KinematicBody2D/Sprite/legL:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 4.15006, 0.0, 0.0, 4.15006 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("KinematicBody2D/Sprite/legR:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.3, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7.0291, 24.3478 ), Vector2( 6.49913, 24.3478 ), Vector2( 6.49913, 24.3478 ), Vector2( 7.0291, 24.3478 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("KinematicBody2D/Sprite/legR:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.3, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -6.51589, 0.0, 0.0, -6.51589 ]
}

[node name="adam" type="Node2D"]
script = ExtResource( 12 )
Beer = ExtResource( 17 )
Ult = ExtResource( 19 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"player",
]]
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 3 )
Bars = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]

[node name="body" type="Sprite" parent="KinematicBody2D/Sprite"]
position = Vector2( 0.464579, 4.8883 )
texture = ExtResource( 1 )

[node name="head" type="Sprite" parent="KinematicBody2D/Sprite"]
position = Vector2( -0.412223, -24.6726 )
z_index = 1
texture = ExtResource( 5 )

[node name="eyes" type="Sprite" parent="KinematicBody2D/Sprite/head"]
visible = false
texture = ExtResource( 21 )

[node name="handL" type="Sprite" parent="KinematicBody2D/Sprite"]
modulate = Color( 0.956863, 0.858824, 0.670588, 1 )
position = Vector2( -18.7074, 9.20673 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
texture = ExtResource( 4 )

[node name="handR" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.956863, 0.858824, 0.670588, 1 )
position = Vector2( 21.3266, 9.69692 )
scale = Vector2( 0.5, 0.5 )
z_index = -3
texture = ExtResource( 4 )

[node name="weapon" type="Area2D" parent="KinematicBody2D/Sprite/handR"]
show_behind_parent = true
position = Vector2( -38.1904, -22.7409 )
scale = Vector2( 2.22222, 2.22222 )
monitoring = false

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Sprite/handR/weapon"]
show_behind_parent = true
position = Vector2( 21.2952, 8.38509 )
rotation = 0.436877
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )
offset = Vector2( 2.78225, -22.2975 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Sprite/handR/weapon"]
position = Vector2( 30.8065, -6.9516 )
rotation = -1.13229
shape = SubResource( 1 )

[node name="legL" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.184314, 0.184314, 0.184314, 1 )
position = Vector2( -8.19322, 23.9495 )
rotation = 0.0724322
z_index = -1
texture = ExtResource( 6 )

[node name="legR" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.184314, 0.184314, 0.184314, 1 )
position = Vector2( 7.0291, 24.3478 )
rotation = -0.113724
z_index = -2
texture = ExtResource( 6 )

[node name="gun" type="Sprite" parent="KinematicBody2D/Sprite"]
visible = false
position = Vector2( 39.521, 13.6377 )
texture = ExtResource( 16 )

[node name="beer" type="Sprite" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
position = Vector2( -12.9496, -10.3597 )
texture = ExtResource( 15 )

[node name="beer2" type="Sprite" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
position = Vector2( -1.29496, -10.3597 )
texture = ExtResource( 15 )

[node name="beer3" type="Sprite" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
position = Vector2( 10.3597, -9.49641 )
texture = ExtResource( 15 )

[node name="beer4" type="Sprite" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
position = Vector2( -7.33814, -7.33814 )
texture = ExtResource( 15 )

[node name="beer5" type="Sprite" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
position = Vector2( 4.7482, -6.90647 )
texture = ExtResource( 15 )

[node name="beer6" type="Sprite" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
position = Vector2( 15.9712, -6.47482 )
texture = ExtResource( 15 )

[node name="laptop" type="Sprite" parent="KinematicBody2D/Sprite"]
visible = false
position = Vector2( 42.9267, 3.17975 )
texture = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 1.2605, -6.96839 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="KinematicBody2D"]
margin_left = -8.15644
margin_top = -70.9612
margin_right = 31.8436
margin_bottom = -47.9612
custom_fonts/font = SubResource( 3 )
text = "P1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = ExtResource( 9 )
anims/idle = ExtResource( 2 )
anims/jump = ExtResource( 7 )
anims/run = ExtResource( 8 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/attack = ExtResource( 13 )
anims/die = ExtResource( 22 )
anims/fire = SubResource( 5 )
anims/gun = SubResource( 6 )
anims/stab = ExtResource( 14 )
anims/ult = SubResource( 7 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="UltTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="KinematicBody2D/Sprite/handR/weapon" to="KinematicBody2D" method="_on_weapon_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="UltTimer" to="." method="_on_UltTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="KinematicBody2D" method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
